<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/enter_pin"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/circle_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="Round Image View"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@+id/circle_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_text"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/circle_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="Round Image View"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@+id/circle_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/circle_1"
        app:layout_constraintTop_toBottomOf="@id/pin_text"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/circle_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="Round Image View"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@+id/circle_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/circle_2"
        app:layout_constraintTop_toBottomOf="@id/pin_text"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/circle_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="Round Image View"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/circle_3"
        app:layout_constraintTop_toBottomOf="@id/pin_text"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn_1"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle_1"
        tools:layout_editor_absoluteY="99dp" />

    <Button
        android:id="@+id/btn_2"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/circle_2"
        tools:layout_editor_absoluteY="99dp" />

    <Button
        android:id="@+id/btn_3"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/circle_3"
        tools:layout_editor_absoluteY="99dp" />


    <Button
        android:id="@+id/btn_4"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />


    <Button
        android:id="@+id/btn_5"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_6"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_7"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_8"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_9"
        android:onClick="numberClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#323232"
        android:text="@string/btn_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="4dp"
        android:onClick="numberClick"
        android:background="#323232"
        android:text="@string/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_8" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="4dp"
        android:background="#323232"
        android:contentDescription="@string/todo"
        android:onClick="numberClickDelete"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_8" />

</androidx.constraintlayout.widget.ConstraintLayout>